...
                    )
                    .padding()
                    .font(.system( size: 24))
                    .foregroundColor(Color.onSurface)
                    .overlay(alignment: .bottomTrailing) {  // sets a layer above the TextEditor
                        ProgressButton(
                            text: "TRÄNSLÅTÉ",
                            isLoading: isTranslating,
                            onClick: {
                                onTranslateEvent(TranslateEvent.Translate())
                            }
                        )
                        .padding(.trailing)
...
